# open-taxi

./: .gitignore  README.md
src/: CMakeLists.txt  chord.cpp  chord.xml  constants.py  customer.py  dht-chord.c  message.hpp  node.cpp  node.hpp  pingpong.cpp  pingpong_d.xml  roamer.py  taxi.py  topology.py  utils.py
src/kademlia_net/: query3.py  server1.py  server2.py  server3.py
src/pythonchord/: chord.py
